puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.System.Shell/content/Controllers/SystemController.cs.pp
namespace $rootnamespace$.Controllers
{
    using System.Web.Mvc;

    public partial class SystemController : Controller
    {        
        // GET: /Settings/
        public ActionResult Index()
        {
            return View();
        }

        public ActionResult Module()
        {
            return View();
        }
    }
}
